--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,6 +14,8 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
+      - name: Configure ES Lint
+        run: npm init @eslint/config
       - name: Lint
         run: npm run lint
   test:
