--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,6 +14,8 @@ jobs:
         run: npm run lint
       - name: Test
         run: npm test
+      - name: Build the project
+        run: npm run build
       - name: Deploy
         run: |
           echo "Deploying react app..."
