--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -11,7 +11,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Initialize eslint
-        run: eslint --init
+        run: |
+          npm install eslint -g -D
+          eslint --init
       - name: Lint
         run: npm run lint
       - name: Test
