--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,6 +14,7 @@ jobs:
         run: |
           npm install eslint -g -D
           eslint --init
+          npm init @eslint/config
       - name: Lint
         run: npm run lint
       - name: Test
