--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
+      - name: Lint
+        run: npm run lint
       - name: Test
         run: npm test
       - name: Build the project
